--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -1,6 +1,5 @@
 .sidebar {
     height: 100vh;
-    width: 20rem;
     background-color: burlywood;
 }
 
@@ -45,4 +44,6 @@
 
 .todo-info > h5 {
     font-size: 1.2rem;
+    margin-left: .3rem;
+    margin-right: .3rem;
 }
