Basic calendar rendering structure

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,12 @@
 .calendar{
     display: grid;
     grid-template-columns: repeat(7,1fr);
-    grid-template-rows: 2rem repeat(4,1fr);
+    grid-template-rows: repeat(5,1fr);
     height: 100vh;
+}
+.day-name{
+    background-color: rgb(163, 198, 231);
+    color: rgb(43, 53, 80);
+    text-align: center;
+    flex-grow: 1;
 }
