--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -47,3 +47,25 @@
     margin-left: .3rem;
     margin-right: .3rem;
 }
+
+
+
+
+
+@media screen and (max-width: 768px){
+
+    .sidebar{
+        position: absolute;
+        width: 100%;
+    }
+    .calendar-btn{
+        cursor: pointer;
+    }
+}
+
+@media screen and (max-width: 346px) {
+    .sidebar {
+        position: absolute;
+        width: 100%;
+    }
+}
