--- a/css/header.css
+++ b/css/header.css
@@ -1,5 +1,14 @@
 .header-content {
     width: 100%;
-    font-size: 2.5rem;
-    background: rgb(207, 206, 206);
+    font-size: 2rem;
+    /* background: rgb(207, 206, 206); */
+}
+
+.header-content > h1 {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    background: rgb(85, 188, 214);
+    border-radius: 20rem;
+    padding: 1rem 2rem 1rem 2rem ;
+    
 }
