--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -1,34 +1,43 @@
 .sidebar {
-  height: 100vh;
-  background-color: burlywood;
+  margin-left: 1rem;
+  min-width: 17rem;
+  height: 90vh;
+  background-color: rgb(185, 185, 185);
+  border-radius: 2rem;
 }
 
 .day-info {
   font-size: 2rem;
   width: 100%;
-  background: rgb(207, 206, 206);
-  border-top: 1px solid blue;
+  /* color: white; */
+}
+
+#day {
+  font-size: 3rem;
 }
 
 #date {
-  font-size: 2.5rem;
+  font-size: 1.5rem;
 }
 
 #clock {
-  font-size: 2rem;
-  padding-bottom: 1rem;
+  font-size: 1.5rem;
 }
 
 .sidebar-todo {
-  width: 100%;
-  height: 15rem;
-  background-color: darkgoldenrod;
+  margin-top: 2rem;
+  padding-bottom: 1rem;
+  width: 95%;
+  background-color: rgb(176, 226, 233);
+  border-radius: .5rem;
+  /* border-top-left-radius: .5rem;
+  border-top-right-radius: .5rem; */
 }
 
 .sidebar-todo-headline {
   width: 100%;
-  background-color: darksalmon;
   font-size: 3rem;
+  font-weight: bold;
 }
 
 .sidebar-todo-headline > i {
@@ -37,9 +46,10 @@
 
 .todo-item {
   width: 90%;
-  background-color: deeppink;
-  margin: 0 1rem 0 1rem;
-  padding: 0.5rem 0 0.5rem 0;
+  background-color: rgb(253, 249, 249);
+  margin: 1rem 1rem 0 1rem;
+  padding: 0.2rem 0.5rem 0.5rem 0.5rem;
+  border-radius: .2rem;
 }
 
 .todo-item-icons > i {
