--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
     flex-grow: 1;
     margin-left: 1rem;
     margin-right: 1rem;
+    
 }
 
 .month {
@@ -16,7 +17,8 @@
     display: grid;
     grid-template-columns: repeat(7,1fr);
     grid-template-rows: repeat(6,1fr);
-    height: 100vh;
+    /* height: 100vh; */
+    min-height: 50rem;
     gap: 1.5px;
 }
 
@@ -66,11 +68,17 @@
     border: 5px solid red;
 }
 
-.holiday > .day-card-top > .date-number > p {
+.holiday >.day-card-bottom > p {
+    margin-top: 1rem;
+    font-size: 2.5rem;
+    color: black;
+}
+
+.red-day > .day-card-top > .date-number > p {
     color: red;
 }
 
-.holiday >.day-card-bottom > p {
+.red-day >.day-card-bottom > p {
     margin-top: 1rem;
     font-size: 2.5rem;
     color: red;
