--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -47,12 +47,16 @@
 .todo-item {
   width: 90%;
   background-color: rgb(253, 249, 249);
-  margin: 1rem 1rem 0 1rem;
-  padding: 0.2rem 0.5rem 0.5rem 0.5rem;
+  padding: .7rem .7rem .7rem .7rem;
   border-radius: .2rem;
 }
 
+.todo-date {
+  margin-bottom: .2rem;
+}
+
 .todo-item-icons > i {
+  margin-left: .3rem;
   margin-bottom: 0.5rem;
   font-size: 1.5rem;
 }
