--- a/css/style.css
+++ b/css/style.css
@@ -71,9 +71,10 @@
     border: 5px solid red;
 }
 
-.holiday >.day-card-bottom > p {
+.holiday >.day-card-bottom {
+    margin-left: 1rem;
     margin-top: 1rem;
-    font-size: 2.5rem;
+    font-size: 1rem;
     color: black;
 }
 
