--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,9 @@
 .day-card {
     background: #e6e3ff;
 }
+.day-card:hover{
+    background: #f0d1d1;
+}
 
 .day-card-top {
     margin-left: 1rem;
@@ -61,8 +64,8 @@
 }
 
 .current {
-    background: #888888;
-    border: 3px solid #696868;
+    background: #dcebdc;
+    border: 3px solid #53e2a9;
 }
 
 .selected {
